<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActIniciar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacion"
            android:textAlignment="center"
            android:textColor="#0B0B0B"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_nombreMuestreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_idTransecto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/idTrasecto"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/et_grupoOrganismos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/clase"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/bt1_iniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickCrear"
            android:text="@string/iniciar"
            android:textSize="18sp" />

        <Button
            android:id="@+id/bt2_iniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickVolver"
            android:text="@string/volver"
            android:textSize="18sp" />
<!--
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="onClickMAPA"
            android:text="IR MAPA" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_light"
            android:onClick="onClickMAPA2"
            android:text="Dos mapa" /> -->
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>