<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ly1"
        android:layout_width="313dp"
        android:layout_height="625dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.859">

        <LinearLayout
            android:id="@+id/ly3"
            android:layout_width="match_parent"
            android:layout_height="482dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/mainFragmentLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt1_ma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:onClick="irIniciar"
                android:text="@string/iniciar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt2_ma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onclick"
                android:text="@string/continuar"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt3_ma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onclick"
                android:text="@string/consultar"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>